--- a/cryptoapp/cryptoapp/app/src/main/resources/vshp/group/app/registration3.fxml
+++ b/cryptoapp/cryptoapp/app/src/main/resources/vshp/group/app/registration3.fxml
@@ -18,8 +18,8 @@
                   <Font name="System Bold" size="20.0" />
                </font>
             </Button>
-            <PasswordField fx:id="fieldPassword" layoutX="55.0" layoutY="302.0" prefHeight="60.0" prefWidth="390.0" style="-fx-background-color: #2B2F2C; -fx-background-radius: 19;" />
-            <PasswordField fx:id="fieldSecondPass" layoutX="55.0" layoutY="418.0" prefHeight="60.0" prefWidth="390.0" style="-fx-background-color: #2B2F2C; -fx-background-radius: 19;" />
+            <PasswordField fx:id="fieldPassword" layoutX="55.0" layoutY="302.0" prefHeight="60.0" prefWidth="390.0" style="-fx-background-color: #2B2F2C; -fx-background-radius: 19;-fx-text-fill: white;" />
+            <PasswordField fx:id="fieldSecondPass" layoutX="55.0" layoutY="418.0" prefHeight="60.0" prefWidth="390.0" style="-fx-background-color: #2B2F2C; -fx-background-radius: 19;-fx-text-fill: white;" />
             <Text fill="#ffffff80" layoutX="68.0" layoutY="187.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Login">
                <font>
                   <Font name="System Bold" size="15.0" />
@@ -59,7 +59,7 @@
                   </ToggleButton>
                </children>
             </Pane>
-            <TextField fx:id="fieldLogin" layoutX="55.0" layoutY="202.0" prefHeight="60.0" prefWidth="390.0" style="-fx-background-color: #2B2F2C; -fx-background-radius: 19;" />
+            <TextField fx:id="fieldLogin" layoutX="55.0" layoutY="202.0" prefHeight="60.0" prefWidth="390.0" style="-fx-background-color: #2B2F2C; -fx-background-radius: 19;-fx-text-fill: white;" />
          </children>
       </Pane>
       <Pane layoutX="500.0" prefHeight="700.0" prefWidth="500.0" />
