--- a/cryptoapp/cryptoapp/app/src/main/resources/vshp/group/app/hello-view.fxml
+++ b/cryptoapp/cryptoapp/app/src/main/resources/vshp/group/app/hello-view.fxml
@@ -14,8 +14,8 @@
       <Pane prefHeight="700.0" prefWidth="500.0" style="-fx-background-color: #1A1A1A;">
          <children>
 
-            <TextField fx:id="fieldLogin" layoutX="55.0" layoutY="195.0" prefHeight="60.0" prefWidth="390.0" style="-fx-background-color: #2B2F2C; -fx-background-radius: 19;" />
-            <TextField fx:id="fieldEmail" layoutX="55.0" layoutY="302.0" prefHeight="60.0" prefWidth="390.0" style="-fx-background-color: #2B2F2C; -fx-background-radius: 19;" />
+            <TextField fx:id="fieldLogin" layoutX="55.0" layoutY="195.0" prefHeight="60.0" prefWidth="390.0" style="-fx-background-color: #2B2F2C; -fx-background-radius: 19;-fx-text-fill: white;" />
+            <TextField fx:id="fieldEmail" layoutX="55.0" layoutY="302.0" prefHeight="60.0" prefWidth="390.0" style="-fx-background-color: #2B2F2C; -fx-background-radius: 19;-fx-text-fill: white;" />
             <Button fx:id="buttonLogin" layoutX="55.0" layoutY="528.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="390.0" style="-fx-background-color: #6AB04C; -fx-text-fill: white; -fx-background-radius: 19;" text="Войти">
                <font>
                   <Font name="Calibri Bold" size="25.0" />
@@ -48,19 +48,19 @@
             </Text>
             <Pane layoutX="55.0" layoutY="33.0" prefHeight="60.0" prefWidth="390.0" style="-fx-background-radius: 19; -fx-background-color: #0E0E10;">
                <children>
-                  <Button fx:id="switchLogin" layoutX="14.0" layoutY="10.0" mnemonicParsing="false" prefHeight="41.0" prefWidth="185.0" selected="true" style="-fx-background-radius: 14; -fx-background-color: #2E591B;" text="Авторизация" textFill="WHITE">
+                  <ToggleButton fx:id="switchLogin" layoutX="14.0" layoutY="10.0" mnemonicParsing="false" prefHeight="41.0" prefWidth="185.0" selected="true" style="-fx-background-radius: 14; -fx-background-color: #2E591B;" text="Авторизация" textFill="WHITE">
                      <font>
                         <Font size="15.0" />
                      </font>
-                  </Button>
-                  <Button fx:id="switchRegister" layoutX="199.0" layoutY="10.0" mnemonicParsing="false" prefHeight="41.0" prefWidth="185.0" selected="true" style="-fx-background-radius: 14; -fx-background-color: #2E591B;" text="Регистрация" textFill="WHITE">
+                  </ToggleButton>
+                  <ToggleButton fx:id="switchRegister" layoutX="199.0" layoutY="10.0" mnemonicParsing="false" prefHeight="41.0" prefWidth="185.0" selected="true" style="-fx-background-radius: 14; -fx-background-color: #2E591B;" text="Регистрация" textFill="WHITE">
                      <font>
                         <Font size="15.0" />
                      </font>
-                  </Button>
+                  </ToggleButton>
                </children>
             </Pane>
-            <PasswordField fx:id="fieldPassword" layoutX="61.0" layoutY="418.0" prefHeight="60.0" prefWidth="390.0" style="-fx-background-color: #2B2F2C; -fx-background-radius: 19;" />
+            <PasswordField fx:id="fieldPassword" layoutX="61.0" layoutY="418.0" prefHeight="60.0" prefWidth="390.0" style="-fx-background-color: #2B2F2C; -fx-background-radius: 19;-fx-text-fill: white;" />
             <Text fx:id="noAccText" accessibleRole="BUTTON" fill="#2e571b" layoutX="254.0" layoutY="638.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Создать аккаунт">
                <font>
                   <Font size="15.0" />
